<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<TableLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="1"
	    android:paddingTop="10dip">
	
        <Spinner android:id="@+id/contact"
			android:layout_marginLeft="5dip"
			android:layout_marginRight="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
	
	    <TableRow>
	        <TextView android:text="@string/label_uri"
			 android:layout_marginLeft="5dip"
			 android:gravity="right"/>
			<TextView android:id="@+id/uri"
			 android:singleLine="true"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"/>
	    </TableRow>
	    
	    <TableRow>
	        <TextView android:text="@string/label_progress_status"
			 android:layout_marginLeft="5dip"
			 android:gravity="right"/>
			<TextView android:id="@+id/progress_status"
			 android:singleLine="true"
			 android:layout_marginLeft="5dip"
			 android:layout_marginRight="5dip"/>
	    </TableRow>
	
	    <TableRow>
	        <TextView android:text="@string/label_progress_bar"
			 android:gravity="right"
			 android:padding="5dip"/>
			<ProgressBar android:id="@+id/progress_bar"
 			 style="?android:attr/progressBarStyleHorizontal"
			 android:gravity="left"
			 android:padding="5dip"/>
	    </TableRow>

	    <TableRow android:padding="10dip"></TableRow>
	
		<Button android:text="@string/label_dial"
		 android:layout_marginLeft="5dip"
 		 android:layout_marginRight="5dip"
		 android:id="@+id/dial"
		 android:padding="5dip"/>

		<Button android:text="@string/label_select_picture"
		 android:layout_marginLeft="5dip"
		 android:layout_marginRight="5dip"
		 android:id="@+id/select"
		 android:padding="5dip"/>

		<Button android:text="@string/label_initiate_sharing"
 		 android:layout_marginLeft="5dip"
		 android:layout_marginRight="5dip"
		 android:id="@+id/invite"
		 android:padding="5dip"/>
	
	</TableLayout>
	
</ScrollView>	
